# RClockPi-4-B

./: .env.example  .gitignore  CMakeLists.txt  README.md  run_clock.sh
assets/weather/: README.md
config/: config.example.json  config.json
src/: main.cpp
src/auth/: OAuthTokenStore.cpp  OAuthTokenStore.h
src/db/: EventStore.cpp  EventStore.h
src/services/: CalendarSyncService.cpp  CalendarSyncService.h  WeatherSyncService.cpp  WeatherSyncService.h
src/util/: TimeUtil.cpp  TimeUtil.h
src/views/: CalendarView.cpp  CalendarView.h  ClockView.cpp  ClockView.h  WeatherView.cpp  WeatherView.h
